--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-index.html
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Primera página</title>
+</head>
+<body>
+
+	<h3>Contenido para agregar en el primer commit</h3>
+	
+</body>
+</html>
